--- a/webapps/ui/admin/client/scripts/index.html
+++ b/webapps/ui/admin/client/scripts/index.html
@@ -138,7 +138,7 @@
     <footer cam-widget-footer
             version="v${project.version}"></footer>
 
-    <script type="application/javascript">
+    <script type="application/javascript" nonce="$CSP_NONCE">
       var adminConf = window.camAdminConf = {};
 
       window.PLUGIN_DEPENDENCIES = $PLUGIN_DEPENDENCIES || [];
@@ -149,14 +149,14 @@
       };
     </script>
 
-    <!--[if lte IE 9]><script type="text/javascript">
+    <!--[if lte IE 9]><script type="text/javascript" nonce="$CSP_NONCE">
       adminConf.polyfills = adminConf.polyfills || [];
       adminConf.polyfills.push('placeholder');
     </script><![endif]-->
 
     <script type="application/javascript"
-            src="$APP_ROOT/lib/require.js"></script>
-    <script type="text/javascript">
+            src="$APP_ROOT/lib/require.js" nonce="$CSP_NONCE"></script>
+    <script type="text/javascript" nonce="$CSP_NONCE">
 
 window.__define = window.define;
 window.__require = window.require;
