--- a/webapps/ui/cockpit/client/scripts/index.html
+++ b/webapps/ui/cockpit/client/scripts/index.html
@@ -140,7 +140,7 @@
     <footer cam-widget-footer
             version="v${project.version}"></footer>
 
-    <script type="application/javascript">
+    <script type="application/javascript" nonce="$CSP_NONCE">
       var cockpitConf = window.camCockpitConf = {};
 
       window.PLUGIN_DEPENDENCIES = $PLUGIN_DEPENDENCIES || [];
@@ -151,14 +151,14 @@
       };
     </script>
 
-    <!--[if lte IE 9]><script type="text/javascript">
+    <!--[if lte IE 9]><script type="text/javascript" nonce="$CSP_NONCE">
       cockpitConf.polyfills = cockpitConf.polyfills || [];
       cockpitConf.polyfills.push('placeholder');
     </script><![endif]-->
 
     <script type="application/javascript"
-            src="$APP_ROOT/lib/require.js"></script>
-    <script type="text/javascript">
+            src="$APP_ROOT/lib/require.js" nonce="$CSP_NONCE"></script>
+    <script type="text/javascript" nonce="$CSP_NONCE">
 
 window.__define = window.define;
 window.__require = window.require;
