--- a/webapps/ui/tasklist/client/index.html
+++ b/webapps/ui/tasklist/client/index.html
@@ -113,12 +113,12 @@
           version="v${project.version}"></footer>
 
 
-  <script type="text/javascript">
+  <script type="text/javascript" nonce="$CSP_NONCE">
     // override the following line to include configuration
     var tasklistConf = {};
   </script>
 
-  <script type="text/javascript">
+  <script type="text/javascript" nonce="$CSP_NONCE">
     window.PLUGIN_DEPENDENCIES = $PLUGIN_DEPENDENCIES || [];
     window.PLUGIN_PACKAGES = $PLUGIN_PACKAGES || [];
 
@@ -127,14 +127,14 @@
     };
   </script>
 
-  <!--[if lte IE 9]><script type="text/javascript">
+  <!--[if lte IE 9]><script type="text/javascript" nonce="$CSP_NONCE">
     tasklistConf.polyfills = tasklistConf.polyfills || [];
     tasklistConf.polyfills.push('placeholder');
   </script><![endif]-->
 
   <script type="application/javascript"
-          src="$APP_ROOT/lib/require.js"></script>
-    <script type="text/javascript">
+          src="$APP_ROOT/lib/require.js" nonce="$CSP_NONCE"></script>
+    <script type="text/javascript" nonce="$CSP_NONCE">
 
 window.__define = window.define;
 window.__require = window.require;
