--- a/webapps/ui/welcome/client/scripts/index.html
+++ b/webapps/ui/welcome/client/scripts/index.html
@@ -106,9 +106,9 @@
 
     <!-- footer -->
     <footer cam-widget-footer
-            version="v${project.version}"></footer>
+            version="v${project.version}" nonce="$CSP_NONCE"></footer>
 
-    <script type="application/javascript">
+    <script type="application/javascript" nonce="$CSP_NONCE">
       window.PLUGIN_DEPENDENCIES = $PLUGIN_DEPENDENCIES || [];
       window.PLUGIN_PACKAGES = $PLUGIN_PACKAGES || [];
 
@@ -118,8 +118,8 @@
     </script>
 
     <script type="application/javascript"
-            src="$APP_ROOT/lib/require.js"></script>
-    <script type="text/javascript">
+            src="$APP_ROOT/lib/require.js" nonce="$CSP_NONCE"></script>
+    <script type="text/javascript" nonce="$CSP_NONCE">
 
 window.__define = window.define;
 window.__require = window.require;
